# pet-log

./: .gitattributes  .gitignore  AGENTS.md  PORTFOLIO_PET_LOG.md  PROJECT_4_PET_LOG.md  README.md  SKILLS_INVENTORY.md  TECH_STACK.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  session-summary.md  기획.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  db_schema.py  main.py  pet_log.sqlite3  pyproject.toml  url-list.md
backend/.chroma_db/: chroma.sqlite3
backend/docs/: shopping-recommendations.md
backend/docs/db/: record-data-schema.md
backend/scripts/: azure-deploy.sh  azure-package.sh  deploy-docker.sh  ingest_knowledge.py  ingest_web_knowledge.py  run-dev.bat  run-dev.sh  smoke_care_question.py  smoke_community.py  smoke_google_hospital_recommendations.py  smoke_naver_shopping.py  smoke_record_input_to_db.py  smoke_record_structurer.py  smoke_record_summary_provider.py  smoke_repository_changes.py  smoke_web_evaluator.py  test_web_search.py
backend/src/: composition.py
backend/src/agent_runtime/: __init__.py  memory.py  prompts.py  runtime.py  tool_registry.py
backend/src/application/: action_navigation.py  dto.py  errors.py
backend/src/domain/: enums.py  models.py  record_labels.py
backend/src/infrastructure/: __init__.py  database.py  seed_data.py
backend/src/middleware/: __init__.py  hospital_cache_rate_limit.py  hospital_fallback.py  logging.py  retry.py  safety.py  shopping_fallback.py  tracing.py  validation.py
backend/src/tools/: __init__.py  care_tools.py  profile_tools.py  record_tools.py  schedule_tools.py  (+1 more)
backend/tests/: test_agent_action_navigation.py  test_agent_runtime_wiring.py  test_agent_skeletons.py  test_ai_endpoints.py  test_care_knowledge_rag_skeleton.py  test_care_knowledge_retriever.py  test_community_http_routes.py  test_community_repository.py  test_community_smoke_script.py  test_composition.py  test_context_policies.py  test_database_repositories.py  test_hospital_recommendations.py  test_http_routes.py  test_in_memory_repositories.py  test_knowledge_ingester.py  test_knowledge_pipeline.py  test_knowledge_web_evaluator.py  test_knowledge_web_search.py  test_llm_local_gemma_fallback.py  test_llm_local_runtime.py  test_llm_preload.py  test_llm_provider_contract.py  test_middleware_factories.py  test_missing_record_persistence.py  test_new_http_routes.py  test_new_repositories.py  test_notification_api.py  test_notification_pipeline.py  test_notification_policy.py  test_package_structure.py  test_pet_log_agent_pipeline.py  test_policy_fallbacks.py  test_record_structurer.py  test_record_summary_agent.py  test_record_summary_provider.py  test_shopping_agent.py  test_shopping_fallback_middleware.py  test_shopping_recommendations.py  test_speech_provider_integration.py  (+2 more)
(+393 files in other folders)
