[project]
name = "backend"
version = "0.1.0"
description = "Pet Log backend package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "langchain>=1.0,<2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=2.0,<3.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=1.1,<2.0",
    "openai-whisper>=20250625",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["composition"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "agent_runtime*",
    "application*",
    "domain*",
    "infrastructure*",
    "middleware*",
    "presentation*",
    "tools*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
